tests/core/data/csl/TypeLoaderTests/SyntaxErrors/struct3.csl
struct struct3
{
	string name;
;
